--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,9 +16,7 @@
     "experimentalDecorators": true,
     "moduleResolution": "bundler",
     "paths": {
-      "@blackxes/angular-shared-ui": [
-        "./projects/blackxes/angular-shared-ui/src/public-api"
-      ]
+      "@blackxes/angular-shared-ui": ["./projects/blackxes/angular-shared-ui/src/public-api"]
     },
     "importHelpers": true,
     "target": "ES2022",
